src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>AC_Select_Score__c</fullName>
        <label>AC Select Score</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AC_Selection_Summ__c</fullName>
        <label>AC Selection Summ</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Considerations__c</fullName>
        <label>Additional Considerations</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>After_Hours_Available__c</fullName>
        <label>After Hours Available</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Aircraft_Upload_Complete__c</fullName>
        <label>Aircraft Upload Complete</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approximate_Company_Revenue__c</fullName>
        <label>Approximate Company Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Assigned_to__c</fullName>
        <label>Assigned to</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Backup_Analyst__c</fullName>
        <label>Backup Analyst</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Chris Jahn</fullName>
                </value>
                <value>
                    <fullName>Dan Harris</fullName>
                </value>
                <value>
                    <fullName>Luke Hatfield</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Booking_Notice_Score__c</fullName>
        <label>Booking Notice Score</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Broker_Credit_Card_Fee__c</fullName>
        <label>Broker Credit Card Fee</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Broker_Wire_Instructions__c</fullName>
        <label>Broker Wire Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cancel_Terms_Score__c</fullName>
        <label>Cancel Terms Score</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancel_Terms_Summ__c</fullName>
        <label>Cancel Terms Summ</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cancellation_Terms__c</fullName>
        <label>Cancellation Terms</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Client_End_Date__c</fullName>
        <label>Client End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Client_Start_Date__c</fullName>
        <label>Client Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If client - check box</inlineHelpText>
        <label>Client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__BAR__c</fullName>
        <label>Billing Address Record Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__BAS__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Billing Address Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__BAV__c</fullName>
        <label>Billing Address Vacancy</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__BRDI__c</fullName>
        <label>Billing Residential Delivery Indicator</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__BTZ__c</fullName>
        <label>Billing Timezone</label>
        <length>48</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__SAR__c</fullName>
        <label>Shipping Address Record Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__SAS__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Shipping Address Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__SAV__c</fullName>
        <label>Shipping Address Vacancy</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__SRDI__c</fullName>
        <label>Shipping Residential Delivery Indicator</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__STZ__c</fullName>
        <label>Shipping Timezone</label>
        <length>48</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Details__c</fullName>
        <label>Contract Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Corp_Sum_Score__c</fullName>
        <label>Corp Sum Score</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Corporate_Headquarters__c</fullName>
        <label>Corporate Headquarters</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Corporate_Summary__c</fullName>
        <label>Corporate Summary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Fee__c</fullName>
        <label>Credit Card Fee</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Crew_Information__c</fullName>
        <label>Crew Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Upload_Note__c</fullName>
        <label>Data Upload Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Upload_Status__c</fullName>
        <label>Data Upload Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Offine Report Complete - Awaiting Upload</fullName>
                </value>
                <value>
                    <fullName>Upload Partially Complete</fullName>
                </value>
                <value>
                    <fullName>Upload Complete</fullName>
                </value>
                <value>
                    <fullName>Communities Launched</fullName>
                </value>
                <value>
                    <fullName>Audit / Reupload</fullName>
                </value>
                <value>
                    <fullName>No History to Upload</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Departure_Move__c</fullName>
        <label>Departure Move</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Deposit_Score__c</fullName>
        <label>Deposit Score</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deposit_Summ__c</fullName>
        <label>Deposit Summ</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Direct_Booking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Direct Booking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Domestic_Booking_Notice__c</fullName>
        <label>Domestic Booking Notice</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Executives__c</fullName>
        <label>Executives</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Expiration_Score__c</fullName>
        <label>Expiration Score</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expiration_Summ__c</fullName>
        <label>Expiration Summ</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Expiration__c</fullName>
        <label>Expiration</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fleet_Aircraft__c</fullName>
        <label>Fleet Aircraft</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fleet_Size_Score__c</fullName>
        <label>Fleet Size Score</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fleet_Size_Summ__c</fullName>
        <label>Fleet Size Summ</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Frax_AC_Currently_Avail__c</fullName>
        <label>Frax AC Currently Avail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Frax_AC_Selection_Summ__c</fullName>
        <label>Frax AC Selection Summ</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Frax_Commitment_Summ__c</fullName>
        <label>Frax Commitment Summ</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Frax_Deposit_Summ__c</fullName>
        <label>Frax Deposit Summ</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Frax_Guaranteed_Avail_Summ__c</fullName>
        <label>Frax Guaranteed Avail Summ</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Frax_Liability_Insurance__c</fullName>
        <label>Frax Liability Insurance</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Frax_Peak_Days_Score__c</fullName>
        <label>Frax Peak Days Score</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Frax_Peak_Days_Summ__c</fullName>
        <label>Frax Peak Days Summ</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Frax_Price_Range_Summ__c</fullName>
        <label>Frax Price Range Summ</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Frax_Seating_Config__c</fullName>
        <label>Frax Seating Config</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Frax_WIFI__c</fullName>
        <label>Frax WIFI</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Free_WIFI__c</fullName>
        <label>Free WIFI</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Guaranteed_Avail_Score__c</fullName>
        <label>Guaranteed Avail Score</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Guaranteed_Avail_Summ__c</fullName>
        <label>Guaranteed Avail Summ</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Guaranteed_Availability__c</fullName>
        <label>Guaranteed Availability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Important_Profile_Notes_from_Contact__c</fullName>
        <inlineHelpText>Information moved over from Contact for Flight Strategy Reporting</inlineHelpText>
        <label>Important Profile Notes from Contact</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incentive_Information__c</fullName>
        <inlineHelpText>Incentive Information for Flight Strategy</inlineHelpText>
        <label>Incentive Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Int_l_Booking_Notice_incl_AK_HI__c</fullName>
        <label>Int&apos;l Booking Notice - incl AK HI</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>International_Cancellation_Terms__c</fullName>
        <label>International Cancellation Terms</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Is_there_an_on_fleet_recovery__c</fullName>
        <label>Is there an on-fleet recovery?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Itinerary_Type__c</fullName>
        <label>Itinerary Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Roundtrip</fullName>
                </value>
                <value>
                    <fullName>One-way</fullName>
                </value>
                <value>
                    <fullName>Roundtrip &amp; One-way</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Activity__c</fullName>
        <formula>TODAY() - LastActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of Days Since Last Activity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Analyst__c</fullName>
        <label>Lead Analyst</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Chris Jahn</fullName>
                </value>
                <value>
                    <fullName>Dan Harris</fullName>
                </value>
                <value>
                    <fullName>Luke Hatfield</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Leg_Reconcile_Status__c</fullName>
        <label>Leg Reconcile Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Partial - missing contracts</fullName>
                </value>
                <value>
                    <fullName>Partial - need help</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Leg_Reconciliation_Notes__c</fullName>
        <label>Leg Reconciliation Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Liability_Insurance__c</fullName>
        <label>Liability Insurance</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Main_Email__c</fullName>
        <label>Main Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Major_Safety_Incidents__c</fullName>
        <label>Major Safety Incidents</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Peak_Days__c</fullName>
        <label>Number of Peak Days</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Offers_Program__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Offers Program?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>One_Pager_Pricing_Language__c</fullName>
        <label>One-Pager Pricing Language</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Operations_and_Customer_Service__c</fullName>
        <label>Operations and Customer Service</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Operator_Owner__c</fullName>
        <label>Operator Owner</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <label>Payment Terms</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Peak_Booking_Notice__c</fullName>
        <label>Peak Booking Notice</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Peak_Cancellation_Terms__c</fullName>
        <label>Peak Cancellation Terms</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Peak_Days_Score__c</fullName>
        <label>Peak Days Score</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Peak_Days_Summ__c</fullName>
        <label>Peak Days Summ</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Peak_Premium__c</fullName>
        <label>Peak Premium</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Peak_Restrictions__c</fullName>
        <label>Peak Restrictions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Price_Range_Score__c</fullName>
        <label>Price Range Score</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price_Range_Summ__c</fullName>
        <label>Price Range Summ</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Priority_Account__c</fullName>
        <inlineHelpText>Yes- Only</inlineHelpText>
        <label>Priority Account</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_Instance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Process Instance</label>
        <referenceTo>FSTR__Process_Instance__c</referenceTo>
        <relationshipLabel>Account</relationshipLabel>
        <relationshipName>CO_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Profession__c</fullName>
        <label>Profession</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advertising/Marketing/Branding</fullName>
                </value>
                <value>
                    <fullName>Architect</fullName>
                </value>
                <value>
                    <fullName>Artist</fullName>
                </value>
                <value>
                    <fullName>Attorney-Aviation</fullName>
                </value>
                <value>
                    <fullName>Attorney-Divorce</fullName>
                </value>
                <value>
                    <fullName>Attorney-Entertainment</fullName>
                </value>
                <value>
                    <fullName>Attorney-Estate</fullName>
                </value>
                <value>
                    <fullName>Attorney-Real Estate</fullName>
                </value>
                <value>
                    <fullName>Aviation- Broker</fullName>
                </value>
                <value>
                    <fullName>Aviation-Brokerage Executive</fullName>
                </value>
                <value>
                    <fullName>Aviation-Brokerage Sales</fullName>
                </value>
                <value>
                    <fullName>Aviation-Caterer</fullName>
                </value>
                <value>
                    <fullName>Aviation-Consultant</fullName>
                </value>
                <value>
                    <fullName>Aviation-Flight Attendant</fullName>
                </value>
                <value>
                    <fullName>Aviation-Operator</fullName>
                </value>
                <value>
                    <fullName>Aviation-Operator Executive</fullName>
                </value>
                <value>
                    <fullName>Aviation-Operator Sales</fullName>
                </value>
                <value>
                    <fullName>Aviation-Pilot</fullName>
                </value>
                <value>
                    <fullName>Aviation-Whole Aircraft Brokerage</fullName>
                </value>
                <value>
                    <fullName>Beach Club Employee</fullName>
                </value>
                <value>
                    <fullName>Car Dealership Employee</fullName>
                </value>
                <value>
                    <fullName>Chef/Restauranteur</fullName>
                </value>
                <value>
                    <fullName>Club-Beach</fullName>
                </value>
                <value>
                    <fullName>Club-Country</fullName>
                </value>
                <value>
                    <fullName>Club-Destination</fullName>
                </value>
                <value>
                    <fullName>Club-Social</fullName>
                </value>
                <value>
                    <fullName>Concierge</fullName>
                </value>
                <value>
                    <fullName>Concierge Rep</fullName>
                </value>
                <value>
                    <fullName>Country Club Employee</fullName>
                </value>
                <value>
                    <fullName>Destination Club Employee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_Notes__c</fullName>
        <label>Program Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Publicly_Traded_Company__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Publicly Traded Company</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Purpose_of_Trip_Notes__c</fullName>
        <label>Purpose of Trip Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QC_Mandated_Client__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>All flights MUST be QC&apos;d</inlineHelpText>
        <label>QC Mandated Client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reconciling_Contact_Email__c</fullName>
        <label>Reconciling Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Reconciling_Contact_Phone__c</fullName>
        <label>Reconciling Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Reconciling_Contact__c</fullName>
        <label>Reconciling Contact</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refundability__c</fullName>
        <label>Refundability</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Safety_Incident_Description__c</fullName>
        <label>Safety Incident Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Safety_Protocols__c</fullName>
        <label>Safety Protocols</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Safety_Rating_s__c</fullName>
        <label>Safety Rating(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Air Charter Safety Foundation</fullName>
                </value>
                <value>
                    <fullName>ARGUS Gold</fullName>
                </value>
                <value>
                    <fullName>ARGUS Gold+</fullName>
                </value>
                <value>
                    <fullName>ARGUS Platinum</fullName>
                </value>
                <value>
                    <fullName>Aviation Safety Action Program (ASAP)</fullName>
                </value>
                <value>
                    <fullName>IS-BAO</fullName>
                </value>
                <value>
                    <fullName>IS-BAO Stage 1</fullName>
                </value>
                <value>
                    <fullName>IS-BAO Stage 2</fullName>
                </value>
                <value>
                    <fullName>IS-BAO Stage 3</fullName>
                </value>
                <value>
                    <fullName>Sentient Certified Pass</fullName>
                </value>
                <value>
                    <fullName>Wyvern Registered</fullName>
                </value>
                <value>
                    <fullName>Wyvern Wingman</fullName>
                </value>
                <value>
                    <fullName>No Safety Rating</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Seating_Configuration__c</fullName>
        <label>Seating Configuration</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Standard_Booking_Notice_Summ__c</fullName>
        <label>Standard Booking Notice Summ</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Standard_Cancellation_Terms__c</fullName>
        <label>Standard Cancellation Terms</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Stock_Exchange_Ticker__c</fullName>
        <label>Stock Exchange Ticker</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trCustomerOnboardingScore__c</fullName>
        <description>A calculated customer onboarding score based on a TaskRay Project related to this Account. Based on a project&apos;s Initial Estimated Duration vs. Actual Duration and the average of Internal &amp; External Sentiment.</description>
        <inlineHelpText>This field stores a calculated customer onboarding score based on a TaskRay Project related to this Account.</inlineHelpText>
        <label>Customer Onboarding Score</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trDesiredOutcomes__c</fullName>
        <description>A customer&apos;s desired outcome(s) for their onboarding process. Can be populated from the Desired Outcomes field on TaskRay Project.</description>
        <inlineHelpText>Use this field to capture a customer&apos;s desired outcome(s). Can be populated from the Desired Outcomes field on TaskRay Project.</inlineHelpText>
        <label>Desired Outcomes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trOnboardingDuration__c</fullName>
        <formula>IF(
OR(
ISBLANK( TASKRAY__trOnboardingStartDate__c ),
ISBLANK( TASKRAY__trOnboardingEndDate__c )
), 
NULL,
TASKRAY__trOnboardingEndDate__c - TASKRAY__trOnboardingStartDate__c)</formula>
        <label>Onboarding Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trOnboardingEndDate__c</fullName>
        <description>Used by TaskRay to record the actual end date of the onboarding project associated with this account.</description>
        <inlineHelpText>Used by TaskRay to record the actual end date of the onboarding project associated with this account.</inlineHelpText>
        <label>Onboarding End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trOnboardingStartDate__c</fullName>
        <description>Used by TaskRay to record the actual start date of the onboarding project associated with this account.</description>
        <inlineHelpText>Used by TaskRay to record the actual start date of the onboarding project associated with this account.</inlineHelpText>
        <label>Onboarding Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TEST__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Clients/Prospects</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Aircraft_in_Fleet__c</fullName>
        <label>Total Number of Aircraft in Fleet</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Fleet__c</fullName>
        <label>Total Number of Fleet</label>
        <summaryFilterItems>
            <field>Aircraft__c.Name</field>
            <operation>notContain</operation>
            <value>TBD</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Aircraft__c.Name</field>
            <operation>notContain</operation>
            <value>Unknown</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Aircraft__c.Aircraft_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>Aircraft__c.Operator__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Track_Purpose_of_Trip__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>For clients that want AvP to track purpose of trip.</inlineHelpText>
        <label>Track Purpose of Trip</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Upgrades_Downgrades__c</fullName>
        <label>Upgrades Downgrades</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Wire_Instructions__c</fullName>
        <label>Wire Instructions</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Year_Founded__c</fullName>
        <label>Year Founded</label>
        <length>4</length>
        <type>Text</type>
    </fields>
</CustomObject>